Changed Layout + Added Kids

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#movies">Movies</a></li>
-                <li><a href="#coming">Coming</a></li>
+                <li><a href="#kids">Kids</a></li>
                 <li><a href="#watchlist">Watchlist</a></li>
             </ul>
         </nav>
@@ -76,11 +76,45 @@
         </div>
     </section>
 
-    <!--Coming Soon Movies-->
-    <section class="coming" id="coming">
-        <h2 class="heading">Coming Soon</h2>
+    <!--Movies-->
+    <section class="movies" id="movies">
+        <h2 class="heading">Movies</h2>
 
-        <div class="coming-soon swiper">
+        <div class="movies-out-now swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide movie">
+                    <img src="images/Friday.webp">
+                </div>
+                <div class="swiper-slide movie">
+                    <img src="images/Coco.webp">
+                </div>
+                <div class="swiper-slide movie">
+                    <img src="images/Soul.webp">
+                </div>
+                <div class="swiper-slide movie">
+                    <img src="images/Titanic.jpg">
+                </div>
+                <div class="swiper-slide movie">
+                    <img src="images/Scream.jpg">
+                </div>
+                <div class="swiper-slide movie">
+                    <img src="images/WallE.webp">
+                </div>
+                <div class="swiper-slide movie">
+                    <img src="images/Starwars.webp">
+                </div>
+                <div class="swiper-slide movie">
+                    <img src="images/Ratatoullie.webp">
+                </div>
+            </div>
+        </div>
+    </section>
+
+                   <!--Kids Movies-->
+    <section class="kids" id="kids">
+        <h2 class="heading">Kids</h2>
+
+        <div class="kids-movies swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide movie">
                     <img src="images/Endgame.webp">
@@ -114,41 +148,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-        <!--Movies-->
-        <section class="movies" id="movies">
-            <h2 class="heading">Movies</h2>
-    
-            <div class="movies-out-now swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide movie">
-                        <img src="images/Friday.webp">
-                    </div>
-                    <div class="swiper-slide movie">
-                        <img src="images/Coco.webp">
-                    </div>
-                    <div class="swiper-slide movie">
-                        <img src="images/Soul.webp">
-                    </div>
-                    <div class="swiper-slide movie">
-                        <img src="images/Titanic.jpg">
-                    </div>
-                    <div class="swiper-slide movie">
-                        <img src="images/Scream.jpg">
-                    </div>
-                    <div class="swiper-slide movie">
-                        <img src="images/WallE.webp">
-                    </div>
-                    <div class="swiper-slide movie">
-                        <img src="images/Starwars.webp">
-                    </div>
-                    <div class="swiper-slide movie">
-                        <img src="images/Ratatoullie.webp">
-                    </div>
-                </div>
-            </div>
-        </section>
+    </section> 
 
      <!-- Swiper JS -->
      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
