Changed Kids Movie Section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </section>
 
-    <!--Kids Movies--> 
+    <!--Kids-Movies--> 
     <section class="kids" id="kids">
         <h2 class="heading">Kids</h2>
 
