--- a/index.html
+++ b/index.html
@@ -6,150 +6,121 @@
     <link rel="stylesheet" href="style.css">
       <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <!--Font Icons-->
     <script src="https://kit.fontawesome.com/2e3e18e325.js" crossorigin="anonymous"></script>
+    <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Talkie</title>
 </head>
 <body>
+    <!--HEADING SECTION-->
     <header class="header">
         <a href="#" class="logo">Talkie</a>
         <i class="fa-solid fa-bars" id="menu-icon"></i>
         <nav class="navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#movies">Movies</a></li>
-                <li><a href="#kids">Kids</a></li>
-                <li><a href="#watchlist">Watchlist</a></li>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#movies">MOVIES</a></li>
+                <li><a href="#kids">KIDS</a></li>
+                <li><a href="#watchlist">WATCHLIST</a></li>
             </ul>
         </nav>
 
-        <div class="search">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text" class="search-bar" placeholder="Search">
+        <div class="heading-right">
+            <div class="search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" class="search-bar" placeholder="Search">
+            </div>
+            <div class="user">
+                <i class="fa-solid fa-user fa-xl"></i>
+            </div>
         </div>
     </header>
 
-    <section class="home swiper" id="home">
-        <div class="swiper-wrapper">
-            <!--Slide 1-->
-            <div class="swiper-slide banner">
-                <img src="images/InsideOut2.avif" alt="insideout2">
-                <div class="banner-content">
-                    <h2>Inside Out 2</h2>
-                    <span>2024 	&#183;  Kids 1h 36m</span>
-                    <p>Joy, Sadness, Anger, Fear and Disgust have been running a successful operation by all accounts. However, when Anxiety shows up, they aren't sure how to feel.</p>
-                    <button>PLAY</button>
+    <!--BANNER SECTION-->
+    <section class="home" id="home">
+            <!-- Add Slider -->
+        <div class="swiper homeSwiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+            <!-- Slides -->
+                <div class="swiper-slide">
+                    <img src="images/InsideOut2.avif">
                 </div>
-            </div>
-            <!--Slide 2-->
-            <div class="swiper-slide banner">
-                <img src="images/MonstersUniversity.jpg" alt="monstersuniversity">
-                <div class="banner-content">
-                    <h2>Monsters University</h2>
-                    <span>2013 	&#183;  Kids 1h 44m</span>
-                    <p>A look at the relationship between Mike Wazowski and James P. "Sully" Sullivan during their days at Monsters University, when they weren't necessarily the best of friends.</p>
-                    <button>PLAY</button>
+                <div class="swiper-slide">
+                    <img src="images/MonstersUniversity.webp">
                 </div>
-            </div>
-            <!--Slide 3-->
-            <div class="swiper-slide banner">
-                <img src="images/FindingNemo.webp" alt="findingnemo">
-                <div class="banner-content">
-                    <h2>Finding Nemo</h2>
-                    <span>2003 	&#183;  Kids 1h 40m</span>
-                    <p>After his son is captured in the Great Barrier Reef and taken to Sydney, a timid clownfish sets out on a journey to bring him home.</p>
-                    <button>PLAY</button>
+                <div class="swiper-slide">
+                    <img src="images/FindingNemo.webp">
                 </div>
-            </div>
-            <!--Slide 4-->
-            <div class="swiper-slide banner">
-                <img src="images/TurningRed.jpeg" alt="turningred">
-                <div class="banner-content">
-                    <h2>Turning Red</h2>
-                    <span>2022 	&#183;  Kids 1h 40m</span>
-                    <p>A thirteen-year-old girl named Mei Lee is torn between staying her mother's dutiful daughter and the changes of adolescence. And as if the challenges were not enough, whenever she gets overly excited she transforms into a giant red panda.</p>
-                    <button>PLAY</button>
+                <div class="swiper-slide">
+                    <img src="images/TurningRed.jpeg">
+                </div>
+                <div class="swiper-slide">
+                    <img src="images/Soul.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img src="images/Rat.jpg">
                 </div>
             </div>
         </div>
     </section>
 
-    <!--Movies-->
-    <section class="movies" id="movies">
-        <h2 class="heading">Movies</h2>
-
-        <div class="movies-out-now swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide movie">
-                    <img src="images/Friday.webp">
+    <!--CONTENT SECTION-->
+    <div class="content">
+        <div class="title">
+            <div id="title">
+                <h1>Inside Out 2</h1>
+            </div>
+            <div id="description">
+                <p>Joy, Sadness, Anger, Fear and Disgust have been running a 
+                    successful operation by all accounts. However, when Anxiety shows up, 
+                    they aren't sure how to feel.
+                </p>
+            </div>
+            <div class="buttons">
+                <div class="playButton">
+                    <button>PLAY</button>
                 </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Coco.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Soul.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Titanic.jpg">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Scream.jpg">
-                </div>
-
-                <div class="swiper-slide movie">
-                    <img src="images/Halloween.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Nightmare.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Jaws.webp">
+                <div class="detailsButton">
+                    <button>View Details</button>
                 </div>
             </div>
         </div>
-    </section>
+            <!-- Swiper navigation buttons -->
+            <div class="nav-btns">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+    </div>
 
-    <!--Kids-Movies--> 
-    <section class="kids" id="kids">
-        <h2 class="heading">Kids</h2>
-
-        <div class="kids-movies swiper">
+    <!--THMBNAIL SECTION-->
+    <div class="thumbs">
+        <div thumbsSlider="" class="swiper thumbsSwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide movie">
-                    <img src="images/Endgame.webp">
+                <div class="swiper-slide">
+                    <img src="images/IO2.webp" alt="insideout2 thumbnail">
                 </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Backtothefuture.webp">
+                <div class="swiper-slide">
+                    <img src="images/MU.webp" alt="monstersuniversity thumbnail">
                 </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Jurassicpark.webp">
+                <div class="swiper-slide">
+                    <img src="images/FN.webp" alt="findingnemo thumbnail">
                 </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Cars.webp">
+                <div class="swiper-slide">
+                    <img src="images/TR.webp" alt="turningred thumbnail">
                 </div>
-                <div class="swiper-slide movie">
-                    <img src="images/ET.webp">
+                <div class="swiper-slide">
+                    <img src="images/S.webp" alt="soul thumbnail">
                 </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Monstersinc.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Toystory.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/WallE.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Starwars.webp">
-                </div>
-                <div class="swiper-slide movie">
-                    <img src="images/Ratatoullie.webp">
+                <div class="swiper-slide">
+                    <img src="images/Ratatoullie.webp" alt="soul thumbnail">
                 </div>
             </div>
         </div>
-    </section> 
+    </div>
 
      <!-- Swiper JS -->
      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
