--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <header class="header">
         <a href="#" class="logo">Talkie</a>
         <i class="fa-solid fa-bars" id="menu-icon"></i>
+        <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
         <nav class="navbar">
             <ul>
                 <li><a href="#home">HOME</a></li>
