--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <button>PLAY</button>
                 </div>
                 <div class="detailsButton">
-                    <button>View Details</button>
+                    <button>Details</button>
                 </div>
             </div>
         </div>
