--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <img src="images/MonstersUniversity.webp">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/FindingNemo.webp">
+                    <img src="images/FindingNemo.jpg">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/TurningRed.jpeg">
+                    <img src="images/TurningRed.jpg">
                 </div>
                 <div class="swiper-slide">
                     <img src="images/Soul.jpg">
