--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="images/FindingNemo.jpg">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/TurningRed.jpg">
+                    <img src="images/ToyStory3.jpg">
                 </div>
                 <div class="swiper-slide">
                     <img src="images/Soul.jpg">
@@ -111,7 +111,7 @@
                     <img src="images/FN.webp" alt="findingnemo thumbnail">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/TR.webp" alt="turningred thumbnail">
+                    <img src="images/TS3.webp" alt="turningred thumbnail">
                 </div>
                 <div class="swiper-slide">
                     <img src="images/S.webp" alt="soul thumbnail">
